--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,8 @@
 .App{
     min-height: 100vh;
     display: flex;
-    background-image: url("./bgimage1.jpg"); 
+    /* background-image: url("./bgimage1.jpg");  */
+    background-color: black;
     background-size: cover;
     background-position: center;
 }
