--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
     min-height: 100vh;
     display: flex;
     /* background-image: url("./bgimage1.jpg");  */
-    background-color: black;
+    background-color: rgb(18, 17, 17);
     background-size: cover;
     background-position: center;
 }
